# Eidor_0

./: CMakeLists.txt  README.md
Shaders/Background_Shader/: Fragment.txt  Vertex.txt
Shaders/Basic_Shader/: Fragment.txt  Vertex.txt
src/: DBM.cpp  DBM.h  GraphicResource.cpp  GraphicResource.h  Player.cpp  Player.h  Structure.cpp  Structure.h  World.cpp  World.h  animation.cpp  animation.h  animation_controler.h  body.cpp  body.h  camera.cpp  camera.h  characteristic.cpp  characteristic.h  collider.cpp  collider.h  collision.cpp  collision.h  interface.cpp  interface.h  load_assets.cpp  load_assets.h  location_object.cpp  location_object.h  main.cpp  player.cpp  player.h  spell.cpp  spell.h
src/EAGL/: color.cpp  color.h  font.cpp  font.h  primitive.cpp  primitive.h  rect.cpp  rect.h  render.cpp  render.h  shader.cpp  shader.h  sprite.cpp  sprite.h  surface.cpp  surface.h  text.cpp  text.h  texture.cpp  texture.h  time.cpp  time.h  transform.cpp  transform.h  vectors.cpp  vectors.h
